# Proyecto-final-POO-Blackjack

./: CMakeLists.txt  README.txt  Readme.txt  main.cpp
.github/workflows/: compilar.yml
Controlador/: ControladorConsola.cpp  ControladorConsola.h
Información proyecto/: README.txt  Tabla de requerrimientos funcionales y no funcionales.xlsx
Modelo/: Baraja.cpp  Baraja.h  Carta.cpp  Carta.h  Crupier.cpp  Crupier.h  Jugador.cpp  Jugador.h  Persona.cpp  Persona.h  Validaciones.cpp  Validaciones.h
Modelo/DataBase/: DataBaseTexto.h
Vista/: VistaConsola.cpp  VistaConsola.h
Vista/VistaSFML/: VistaSFML.h
